...
  <string name="help_online_url">https://goo.gl/Q843oh</string>


  <!-- Activities -->
  <string name="title_item_list">Notes</string>
  <string name="add_note">Add Note</string>
  <string name="title">Title</string>
  <string name="title_activity_list">Omni Notes</string>
  <string name="search">Search</string>
  <string name="search_hint">Search in notes</string>
  <string name="content">Content</string>
  <string name="save">Save</string>
  <string name="share">Share</string>
  <string name="undo">Undo</string>
  <string name="trash">Trash</string>
  <string name="trash_action">Trash</string>
  <string name="trashed">trashed</string>
  <string name="note_trashed">Note(s) trashed</string>
  <string name="note_untrashed">Note(s) restored from trash</string>
  <string name="untrash">Restore from trash</string>
  <string name="delete">Delete</string>
  <string name="note_deleted">Note(s) deleted permanently</string>
  <string name="archive">Archive</string>
  <string name="unarchive">Restore from archive</string>
  <string name="creation">Created:</string>
  <string name="last_update">Updated:</string>
  <string name="delete_note_confirmation">Confirm note deletion?</string>
  <string name="confirm">Confirm</string>
  <string name="ok">Ok</string>
  <string name="no">No</string>
  <string name="failed">failed</string>
  <string name="cancel">Cancel</string>
  <string name="note_updated">Note updated</string>
  <string name="empty_note_not_saved">Can\'t save an empty note</string>
  <string name="empty_note_not_shared">Can\'t share an empty note</string>
...
  <string name="tag">Tag</string>
  <string name="tags">Tags</string>
  <string name="add_tag">Add tags</string>
  <string name="select_tags">Select tag(s)</string>
  <string name="categories">Categories</string>
  <string name="edit_tag">Edit category</string>
  <string name="add_category">Add category</string>
  <string name="category_title">Title</string>
  <string name="category_description">Description</string>
  <string name="category_color">Color</string>
  <string name="category_saved">Category saved</string>
  <string name="category_deleted">Category deleted</string>
  <string name="category_missing_title">Category title missing</string>
  <string name="delete_this_category">Delete this category</string>
  <string name="category">Category</string>
  <string name="categorize_as">Categorize as</string>
  <string name="title_activity_category">Edit category</string>
  <string name="delete_unused_category_confirmation">Confirm category deletion?</string>
  <string name="delete_category_confirmation">This category is used by some notes.\nConfirm notes un-categorization and category deletion?</string>
  <string name="discard">Discard</string>
  <string name="remove_category">Remove category</string>
...
  <string name="tour_detailactivity_save_detail">To go back, press the \"up\" navigation icon, or your device button</string>
  <string name="tour_listactivity_final_title">Enjoy</string>
  <string name="tour_listactivity_final_detail">Thanks for using Omni Notes \nThe opensource alternative for productivity and leisure note-taking!</string>
  <string name="tour_community">Subscribe to the communities to participate!</string>

  <!-- Accessibility -->
  <string name="drawer_open">drawer open</string>
  <string name="drawer_close">drawer closed</string>
  <string name="reminder">reminder</string>
  <string name="stroke_size">stroke size</string>
  <string name="note_thumbnail">note thumbnail</string>
  <string name="note_reminder_symbol">note reminder symbol</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
...
