...
        android:id="@+id/menu_attachment"
        android:icon="@drawable/ic_action_attachment"
        android:orderInCategory="100"
        android:title="@string/attachment"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_category"
        android:icon="@drawable/ic_action_category"
        android:orderInCategory="200"
        android:title="@string/category"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_tag"
...
